--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rounded_date_picker: ^3.0.2
   intl: ^0.17.0
   easy_sidemenu: ^0.4.1+1
+  dropdown_search: ^5.0.5
 
 dev_dependencies:
   flutter_test:
